--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Wordpress intensive</title>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="top-promo">
+      <div class="content-container">
+        <div class="logo">
+          <img class="logo-img" src="/icons/top/logo.png" alt="Logo" />
+          <div class="logo-text">wordpress интенсив</div>
+        </div>
+        <div class="promo-text">
+          <h1 class="promo-yellow-text-title">
+            Создать свой сайт на WordPress
+          </h1>
+          <div class="big-title">
+            <!-- line -->
+            <h2>это просто!</h2>
+            <!-- line -->
+          </div>
+          <h2 class="promo-yellow-text-title">
+            Куда сложнее сделать это правильно!
+          </h2>
+          <div class="small-text">
+            Ежедневно в России появляется более 5 000 новых сайтов.
+            <br />
+            И только единицы из них становятся популярными и приносят ощутимую
+            прибыль. В чем секрет? В чем формула успеха? Узнайте на предстоящем
+            двухдневном
+            <span class="yellow-mark">БЕСПЛАТНОМ</span> интенсиве!
+          </div>
+          <button class="btn">записаться на интенсив</button>
+        </div>
+        <div class="more">
+          <div class="more-text">узнать больше</div>
+          <img class="more-img" src="../icons/top/down.png" alt="Logo" />
+        </div>
+      </div>
+    </section>
+
+    <section class="waiting">0</section>
+  </body>
 </html>
