--- a/index.html
+++ b/index.html
@@ -45,45 +45,47 @@
     </section>
 
     <section class="waiting">
-      <h2 class="waiting-title">Что вас ждет в нашем интенсиве?</h2>
-      <div class="waiting-devider"></div>
-      <div class="waiting-text">
-        2 бесплатных полноценных обучающих вебинара, где:
-      </div>
-      <div class="waiting-content">
-        <div class="waiting-item">
-          <img
-            src="/icons/waiting/waiting_1.png"
-            alt="1"
-            class="waiting-item-img"
-          />
-          <div class="waiting-descr">
-            Всего за два бесплатных вебинара мы научим вас, как создать свой
-            сайт на WordPress.
-          </div>
+      <div class="content-container">
+        <h2 class="waiting-title">Что вас ждет в нашем интенсиве?</h2>
+        <div class="waiting-devider"></div>
+        <div class="waiting-text">
+          2 бесплатных полноценных обучающих вебинара, где:
         </div>
-        <div class="waiting-item">
-          <img
-            src="/icons/waiting/waiting_2.png"
-            alt="2"
-            class="waiting-item-img"
-          />
-          <div class="waiting-descr">
-            Покажем, как правильно оптимизировать сайт и сделать его
-            привлекательным для поисковых систем. Только свежая,
-            профессиональная и актуальная информация!
+        <div class="waiting-content">
+          <div class="waiting-item">
+            <img
+              src="/icons/waiting/waiting_1.png"
+              alt="1"
+              class="waiting-item-img"
+            />
+            <div class="waiting-descr">
+              Всего за два бесплатных вебинара мы научим вас, как создать свой
+              сайт на WordPress.
+            </div>
           </div>
-        </div>
-        <div class="waiting-item">
-          <img
-            src="/icons/waiting/waiting_3.png"
-            alt="3"
-            class="waiting-item-img"
-          />
-          <div class="waiting-descr">
-            Вы узнаете, что такое «хорошая индексация»,«высокая посещаемость»,
-            «стабильный прирост посетителей», «ТОП по запросам» и, что намного
-            важнее, как добиться всех этих показателей!
+          <div class="waiting-item">
+            <img
+              src="/icons/waiting/waiting_2.png"
+              alt="2"
+              class="waiting-item-img"
+            />
+            <div class="waiting-descr">
+              Покажем, как правильно оптимизировать сайт и сделать его
+              привлекательным для поисковых систем. Только свежая,
+              профессиональная и актуальная информация!
+            </div>
+          </div>
+          <div class="waiting-item">
+            <img
+              src="/icons/waiting/waiting_3.png"
+              alt="3"
+              class="waiting-item-img"
+            />
+            <div class="waiting-descr">
+              Вы узнаете, что такое «хорошая индексация»,«высокая посещаемость»,
+              «стабильный прирост посетителей», «ТОП по запросам» и, что намного
+              важнее, как добиться всех этих показателей!
+            </div>
           </div>
         </div>
       </div>
