--- a/index.html
+++ b/index.html
@@ -90,5 +90,107 @@
         </div>
       </div>
     </section>
+
+    <section class="optim">
+      <div class="optim-content">
+        <h2 class="optim-title">Что такое оптимизация и зачем она нужна?</h2>
+        <div class="optim-text">
+          На просторах интернета несчетное количеств действующих и даже
+          заброшенных сайтов. Большинство из них совпадает не только по
+          категориям, но и по содержанию.
+          <br /><br />
+          Представьте себе тысячи сайтов, на которых тем или иным образом
+          предоставляется одна и та же информация или продается одна и та же
+          услуга. И попасть на эти сайты можно лишь по тематическим запросам в
+          поисковых системах.
+          <br /><br />
+          Но как вам быть, если ваш сайт похож на сотню или тысячу таких же, а
+          на одной странице гугла или яндекса всего 10 позиций? Как привести
+          посетителей страницы своего ресурса? Именно для этого и нужна
+          оптимизация – для вывода вашего сайта на первую страницупоиска!
+          <br /><br />
+          <span class="mark">
+            Мы научим вас, как сделать ваш сайт привлекательным для поисковых
+            систем и посоветуем, как вывести его на первые страницы, обходя всех
+            конкурентов.
+          </span>
+        </div>
+      </div>
+    </section>
+
+    <section class="finish">
+      <div class="content-container">
+        <h2 class="finish-title">По окончании обучения Вы сможете!</h2>
+        <div class="finish-devider"></div>
+        <div class="finish-content">
+          <div class="finish-item">
+            <div class="round-bg">
+              <img
+                src="/icons/finish/finish_icon_1.png"
+                alt="1"
+                class="finish-item-img"
+              />
+            </div>
+            <div class="finish-item-descr">Создать свой сайт или блог</div>
+          </div>
+          <div class="finish-item">
+            <div class="round-bg">
+              <img
+                src="/icons/finish/finish_icon_2.png"
+                alt="2"
+                class="finish-item-img"
+              />
+            </div>
+            <div class="finish-item-descr">Правильно его оптимизировать</div>
+          </div>
+          <div class="finish-item">
+            <div class="round-bg">
+              <img
+                src="/icons/finish/finish_icon_3.png"
+                alt="3"
+                class="finish-item-img"
+              />
+            </div>
+            <div class="finish-item-descr">
+              Обеспечить ему медленный, но верный рост в ТОП
+            </div>
+          </div>
+          <div class="finish-item">
+            <div class="round-bg">
+              <img
+                src="/icons/finish/finish_icon_4.png"
+                alt="4"
+                class="finish-item-img"
+              />
+            </div>
+            <div class="finish-item-descr">
+              Достигнуть стабильного прироста посетителей
+            </div>
+          </div>
+          <div class="finish-item">
+            <div class="round-bg">
+              <img
+                src="/icons/finish/finish_icon_5.png"
+                alt="5"
+                class="finish-item-img"
+              />
+            </div>
+            <div class="finish-item-descr">Получать ощутимую прибыль</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="gift">
+      <div class="gift-container">
+        <img class="gift-img" src="/icons/gift.png" alt="gift" />
+        <div class="gift-text">
+          Для всех участников интенсива предусмотрены бонусы и подарки.
+          Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте
+          свой приз по окончании обучения!
+        </div>
+        <button class="btn">записаться на интенсив</button>
+      </div>
+    </section>
   </body>
 </html>
