--- a/index.html
+++ b/index.html
@@ -192,5 +192,26 @@
         <button class="btn">записаться на интенсив</button>
       </div>
     </section>
+    <section class="webinar">
+      <img
+        src="/icons/first_webinar.png"
+        alt="first webinar"
+        class="webinar-icon"
+      />
+      <div class="webinar-text-upper">Первый вебинар состоится:</div>
+      <div class="webinar-date">10 сентября в 20:00 по Москве</div>
+      <div class="webinar-text">
+        Успейте записаться, количество мест ограничено!
+      </div>
+    </section>
+    <footer>
+      <div class="footer-text">
+        <a class="link" href="#">Служба поддержки</a>
+        |
+        <a class="link" href="#">Политика конфиденциальности</a>
+        <br />
+        <a class="link" href="#">Позвоните нам</a>
+      </div>
+    </footer>
   </body>
 </html>
