--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Wordpress intensive</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/fonts.css" />
   </head>
   <body>
     <section class="top-promo">
